--- a/.github/workflows/compile_pdf.yml
+++ b/.github/workflows/compile_pdf.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Github Action for LaTeX
         uses: xu-cheng/latex-action@3.2.0
         with:
-          root_file: src/ausgabe-027.tex
+          root_file: src/multiversum-027.tex
           docker_image: ghcr.io/xu-cheng/texlive-full:20230801
             
