--- a/.github/workflows/compile_pdf.yml
+++ b/.github/workflows/compile_pdf.yml
@@ -31,7 +31,5 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Github Action for LaTeX
-        uses: xu-cheng/latex-action@3.2.0
-        with:
-          root_file: src/multiversum-027.tex
+        run: latexmk src/multiversum-027.tex
             
