--- a/.github/workflows/compile_pdf.yml
+++ b/.github/workflows/compile_pdf.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Install xpatch
+        run: tlmgr install xpatch
 
       # Runs a set of commands using the runners shell
       - name: Github Action for LaTeX
