--- a/.github/workflows/compile_pdf.yml
+++ b/.github/workflows/compile_pdf.yml
@@ -30,6 +30,16 @@ jobs:
       - name: Install additional TeX packages
         run: tlmgr install xpatch textcase mparhack
 
+      - name: Install source-code-pro
+        run: git clone https://github.com/adobe-fonts/source-code-pro.git ~/.fonts/adobe-fonts/source-code-pro
+      - name: Install source-serif-pro
+        run: git clone https://github.com/adobe-fonts/source-serif-pro.git ~/.fonts/adobe-fonts/source-serif-pro
+      - name: Install source-sans-pro
+        run: git clone https://github.com/adobe-fonts/source-sans-pro.git ~/.fonts/adobe-fonts/source-sans-pro
+      - name: Update font caches
+        run: fc-cache -f -v ~/.fonts/adobe-fonts/*
+
+
       - name: Github Action for LaTeX
         run: latexmk src/multiversum-027.tex
             
