--- a/.github/workflows/compile_pdf.yml
+++ b/.github/workflows/compile_pdf.yml
@@ -38,6 +38,8 @@ jobs:
         run: git clone https://github.com/adobe-fonts/source-sans-pro.git ~/.fonts/adobe-fonts/source-sans-pro
       - name: Update font caches
         run: fc-cache -f -v ~/.fonts/adobe-fonts/*
+      - name: show installed fonts
+        run: fc-list | grep -i "Source"
 
 
       - name: Github Action for LaTeX
